testdata/baselines/reference/submodule/conformance/contextualTypedSpecialAssignment.errors.txt
mod.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
mod.js(5,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(9,4): error TS2339: Property 'x' does not exist on type '{}'.
test.js(11,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(14,4): error TS2339: Property 'x' does not exist on type '{}'.
test.js(16,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(18,4): error TS2339: Property 'x' does not exist on type '{}'.
test.js(25,14): error TS2339: Property 's' does not exist on type 'Thing'.
test.js(27,15): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(32,14): error TS2339: Property 's' does not exist on type 'Thing'.
test.js(34,15): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(42,1): error TS2304: Cannot find name 'exports'.
test.js(44,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(46,1): error TS2304: Cannot find name 'exports'.
test.js(49,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
test.js(51,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(53,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
test.js(57,17): error TS2339: Property 'x' does not exist on type 'Thing'.
test.js(59,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(61,17): error TS2339: Property 'x' does not exist on type 'Thing'.
test.js(69,7): error TS7006: Parameter 'n' implicitly has an 'any' type.


==== test.js (19 errors) ====
    /** @typedef {{
        status: 'done'
        m(n: number): void
    }} DoneStatus */
    
    // property assignment
    var ns = {}
    /** @type {DoneStatus} */
    ns.x = {
       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        status: 'done',
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    
    ns.x = {
       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        status: 'done',
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    ns.x
       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
    
    
    // this-property assignment
    class Thing {
        constructor() {
            /** @type {DoneStatus} */
            this.s = {
                 ~
!!! error TS2339: Property 's' does not exist on type 'Thing'.
                status: 'done',
                m(n) { }
                  ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
            }
        }
    
        fail() {
            this.s = {
                 ~
!!! error TS2339: Property 's' does not exist on type 'Thing'.
                status: 'done',
                m(n) { }
                  ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
            }
        }
    }
    
    // exports-property assignment
    
    /** @type {DoneStatus} */
    exports.x = {
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
        status: "done",
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    exports.x
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    
    /** @type {DoneStatus} */
    module.exports.y = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        status: "done",
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    module.exports.y
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
    // prototype-property assignment
    /** @type {DoneStatus} */
    Thing.prototype.x = {
                    ~
!!! error TS2339: Property 'x' does not exist on type 'Thing'.
        status: 'done',
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    Thing.prototype.x
                    ~
!!! error TS2339: Property 'x' does not exist on type 'Thing'.
    
    // prototype assignment
    function F() {
    }
    /** @type {DoneStatus} */
    F.prototype = {
        status: "done",
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    
==== mod.js (2 errors) ====
    // module.exports assignment
    /** @type {{ status: 'done', m(n: number): void }} */
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        status: "done",
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    